[gd_scene load_steps=7 format=3 uid="uid://cm62cdvdnpoe6"]

[ext_resource type="Script" path="res://UI/MainMenu/main_menu.gd" id="1_fd0ag"]
[ext_resource type="Shader" path="res://Common/Shaders/blur.gdshader" id="1_oe0lg"]
[ext_resource type="Texture2D" uid="uid://cq7jg2hqlt5jw" path="res://UI/MainMenu/wp11989510.png" id="1_ryugq"]
[ext_resource type="Theme" uid="uid://x8ajho8j8sb4" path="res://UI/ButtonTheme/menu_theme.tres" id="2_ecv6i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d03ou"]
shader = ExtResource("1_oe0lg")
shader_parameter/amount = 3.943

[sub_resource type="FontFile" id="FontFile_6hki7"]
cache/0/28/0/ascent = 0.0
cache/0/28/0/descent = 0.0
cache/0/28/0/underline_position = 0.0
cache/0/28/0/underline_thickness = 0.0
cache/0/28/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/33/0/ascent = 0.0
cache/0/33/0/descent = 0.0
cache/0/33/0/underline_position = 0.0
cache/0/33/0/underline_thickness = 0.0
cache/0/33/0/scale = 1.0
cache/0/34/0/ascent = 0.0
cache/0/34/0/descent = 0.0
cache/0/34/0/underline_position = 0.0
cache/0/34/0/underline_thickness = 0.0
cache/0/34/0/scale = 1.0
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/37/0/ascent = 0.0
cache/0/37/0/descent = 0.0
cache/0/37/0/underline_position = 0.0
cache/0/37/0/underline_thickness = 0.0
cache/0/37/0/scale = 1.0
cache/0/38/0/ascent = 0.0
cache/0/38/0/descent = 0.0
cache/0/38/0/underline_position = 0.0
cache/0/38/0/underline_thickness = 0.0
cache/0/38/0/scale = 1.0
cache/0/39/0/ascent = 0.0
cache/0/39/0/descent = 0.0
cache/0/39/0/underline_position = 0.0
cache/0/39/0/underline_thickness = 0.0
cache/0/39/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fd0ag")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ryugq")
expand_mode = 4

[node name="BlurRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_d03ou")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1128.0
offset_top = -624.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ecv6i")
theme_override_fonts/font = SubResource("FontFile_6hki7")
text = "Game Title
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="btn_start" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 50)
layout_mode = 2
theme = ExtResource("2_ecv6i")
text = "Start game"

[node name="btn_menu" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 50)
layout_mode = 2
theme = ExtResource("2_ecv6i")
text = "Menu"

[node name="btn_exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 50)
layout_mode = 2
theme = ExtResource("2_ecv6i")
text = "Exit"

[node name="bottom_row" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
alignment = 2

[node name="Seperator2" type="Control" parent="MarginContainer/bottom_row"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/bottom_row"]
layout_mode = 2
alignment = 2

[node name="btn_Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -57.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="btn_fullscreen" type="Button" parent="btn_Margin"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme = ExtResource("2_ecv6i")
text = "Fullscreen
"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/btn_menu" to="." method="_on_btn_menu_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/btn_exit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="btn_Margin/btn_fullscreen" to="." method="_on_btn_fullscreen_pressed"]
